--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-Hello World New Line
-Week 2
-<div>  This is some content  </div>
+<html>
+    <head>
+        <title>My First Page</title>
+    </head>
+
+    <body>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea ad doloremque incidunt nihil? Ullam odit laboriosam distinctio culpa, exercitationem assumenda inventore qui. Impedit quis libero, eos consequatur molestias earum aperiam.</p>
+    </body>
+</html>
