edited the page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
-    <head>
-        <title>My First Page</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My First Page</h1>
 
-    <body>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea ad doloremque incidunt nihil? Ullam odit laboriosam distinctio culpa, exercitationem assumenda inventore qui. Impedit quis libero, eos consequatur molestias earum aperiam.</p>
-    </body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem hic iusto magnam vel, enim at consectetur numquam excepturi aut consequatur nulla nisi facere tenetur atque perspiciatis provident exercitationem ullam repudiandae, nesciunt earum iure odit doloremque reprehenderit veniam? At esse inventore delectus iusto, quae sed libero error? Autem quis sed repudiandae commodi, minus dolores rem mollitia a. Repellendus consequuntur tempora obcaecati laudantium enim beatae sit incidunt exercitationem. Id debitis consectetur rerum, nulla, eius totam sint aperiam at dolores sapiente recusandae vitae amet similique laboriosam quod odio consequuntur veniam, officiis fugiat. Dolore repellendus veniam temporibus qui dolores recusandae earum exercitationem ipsam quod?</p>
+</body>
 </html>
