--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+</body>
+
+<header>some common content</header>
+<main>
     <h1>My First Page</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem hic iusto magnam vel, enim at consectetur numquam excepturi aut consequatur nulla nisi facere tenetur atque perspiciatis provident exercitationem ullam repudiandae, nesciunt earum iure odit doloremque reprehenderit veniam? At esse inventore delectus iusto, quae sed libero error? Autem quis sed repudiandae commodi, minus dolores rem mollitia a. Repellendus consequuntur tempora obcaecati laudantium enim beatae sit incidunt exercitationem. Id debitis consectetur rerum, nulla, eius totam sint aperiam at dolores sapiente recusandae vitae amet similique laboriosam quod odio consequuntur veniam, officiis fugiat. Dolore repellendus veniam temporibus qui dolores recusandae earum exercitationem ipsam quod?</p>
-</body>
+</main>
+<footer>some footer content</footer>
+<section>some java script </section>
 </html>
