--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Music Lifestlye</title>
+
+<!-- Bootstrap CDN CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 </body>
 
 <header>updated this now</header>
 <main>
-    <h1>My First Page</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem hic iusto magnam vel, enim at consectetur numquam excepturi aut consequatur nulla nisi facere tenetur atque perspiciatis provident exercitationem ullam repudiandae, nesciunt earum iure odit doloremque reprehenderit veniam? At esse inventore delectus iusto, quae sed libero error? Autem quis sed repudiandae commodi, minus dolores rem mollitia a. Repellendus consequuntur tempora obcaecati laudantium enim beatae sit incidunt exercitationem. Id debitis consectetur rerum, nulla, eius totam sint aperiam at dolores sapiente recusandae vitae amet similique laboriosam quod odio consequuntur veniam, officiis fugiat. Dolore repellendus veniam temporibus qui dolores recusandae earum exercitationem ipsam quod?</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+
+
 </main>
 <footer>some footer content</footer>
-<section>some java script </section>
+<section>
+    <!-- Bootsrap CDN JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> </section>
 </html>
