--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col"></div>
+        <div class="col">I occupy 12 columns</div>
     </div>
 </div>
 
