--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <h1>im a heading</h1>
 
-
+<h2>im a graphic added via img tag</h2>
+<img src= "https://dummyimage.com/600x400/000/fff.jpg" />
 
 <div class="container-fluid">
     <div class="row">
