--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1>im a heading</h1>
 
 <h2>im a graphic added via img tag</h2>
-<img src= "https://dummyimage.com/1200x900/000/fff.jpg" />
+<img src= "https://dummyimage.com/1200x900/000/fff.jpg" width="200" height="300"/>
 
 <div class="container-fluid">
     <div class="row">
