--- a/index.html
+++ b/index.html
@@ -14,13 +14,52 @@
 <body>
 </body>
 
-<header>updated this now</header>
+<header>
+
+    <!-- Begin Navbar-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <!-- end nav bar -->
+</header>
 <main>
 
-<h1>im a heading</h1>
+<h1>The Lifestyle</h1>
 
-<h2>im a graphic added via img tag</h2>
-<img src= "https://dummyimage.com/1200x900/000/fff.jpg" width="200" height="300"/>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas incidunt ex modi dignissimos magnam odio quaerat, et aspernatur consequatur. Fuga ut ab possimus inventore natus vel, magni dolorem voluptas nisi quo deleniti explicabo! Mollitia, sint nulla. Quaerat dignissimos doloremque necessitatibus aliquam porro. Nemo dolorum ullam, totam, cum laboriosam ipsa eius neque, placeat officiis aspernatur hic quaerat explicabo. Maiores corrupti optio dolore ut ea repellendus qui laborum labore adipisci provident modi, dolorem eveniet sint? Aperiam iste quas accusantium accusamus asperiores similique, quos consectetur iusto deleniti, assumenda vero doloribus incidunt illo eius voluptas exercitationem facere modi sint perferendis perspiciatis obcaecati consequuntur repudiandae natus maiores. Nobis delectus quibusdam laudantium iusto vel, aperiam temporibus beatae fuga rem eligendi voluptas at rerum ad porro consequuntur dolorum ipsam deserunt sunt facere? Est modi beatae accusantium praesentium tempora ipsum, adipisci atque aliquid alias magnam, facere velit doloribus ab voluptas asperiores rem pariatur deserunt recusandae dicta quisquam blanditiis ut ullam, delectus officia. Soluta sequi illo, aperiam cum praesentium nihil alias numquam repellendus exercitationem. Quibusdam cupiditate voluptates reprehenderit magni accusantium ea dolorem rem quisquam voluptatibus odio atque necessitatibus accusamus nostrum, molestias eaque voluptatem saepe pariatur perspiciatis distinctio quasi blanditiis neque cumque hic. Id cum assumenda delectus sit harum.</p>
 
 <div class="container-fluid">
     <div class="row">
