--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas incidunt ex modi dignissimos magnam odio quaerat, et aspernatur consequatur. Fuga ut ab possimus inventore natus vel, magni dolorem voluptas nisi quo deleniti explicabo! Mollitia, sint nulla. Quaerat dignissimos doloremque necessitatibus aliquam porro. Nemo dolorum ullam, totam, cum laboriosam ipsa eius neque, placeat officiis aspernatur hic quaerat explicabo. Maiores corrupti optio dolore ut ea repellendus qui laborum labore adipisci provident modi, dolorem eveniet sint? Aperiam iste quas accusantium accusamus asperiores similique, quos consectetur iusto deleniti, assumenda vero doloribus incidunt illo eius voluptas exercitationem facere modi sint perferendis perspiciatis obcaecati consequuntur repudiandae natus maiores. Nobis delectus quibusdam laudantium iusto vel, aperiam temporibus beatae fuga rem eligendi voluptas at rerum ad porro consequuntur dolorum ipsam deserunt sunt facere? Est modi beatae accusantium praesentium tempora ipsum, adipisci atque aliquid alias magnam, facere velit doloribus ab voluptas asperiores rem pariatur deserunt recusandae dicta quisquam blanditiis ut ullam, delectus officia. Soluta sequi illo, aperiam cum praesentium nihil alias numquam repellendus exercitationem. Quibusdam cupiditate voluptates reprehenderit magni accusantium ea dolorem rem quisquam voluptatibus odio atque necessitatibus accusamus nostrum, molestias eaque voluptatem saepe pariatur perspiciatis distinctio quasi blanditiis neque cumque hic. Id cum assumenda delectus sit harum.</p>
 
 <i class="fa-solid fa-music blinn-fa-icon"></i>
-
+<div class="container-fluid">
+  <div class="row">
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1"><i class="fa-solid fa-music blinn-fa-icon"></i></div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1"><i class="fa-solid fa-person blinn-fa-icon"></i></div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1"><i class="fa-solid fa-ticket blinn-fa-icon"></i></div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1"><i class="fa-brands fa-spotify blinn-fa-icon"></i></div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1"><i class="fa-solid fa-camera blinn-fa-icon"></i></div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1"><i class="fa-solid fa-calendar blinn-fa-icon"></i></div>
+  </div>
+</div>
 </main>
 <footer>some footer content</footer>
 <section>
