--- a/index.html
+++ b/index.html
@@ -59,6 +59,47 @@
 
 <h1>The Lifestyle</h1>
 
+<!--Begins Carousel-->
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://dummyimage.com/1900x600/ccc/0011ff.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://dummyimage.com/1900x600/ccc/0011ff.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://dummyimage.com/1900x600/ccc/0011ff.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<!-- end caurosel-->
+
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas incidunt ex modi dignissimos magnam odio quaerat, et aspernatur consequatur. Fuga ut ab possimus inventore natus vel, magni dolorem voluptas nisi quo deleniti explicabo! Mollitia, sint nulla. Quaerat dignissimos doloremque necessitatibus aliquam porro. Nemo dolorum ullam, totam, cum laboriosam ipsa eius neque, placeat officiis aspernatur hic quaerat explicabo. Maiores corrupti optio dolore ut ea repellendus qui laborum labore adipisci provident modi, dolorem eveniet sint? Aperiam iste quas accusantium accusamus asperiores similique, quos consectetur iusto deleniti, assumenda vero doloribus incidunt illo eius voluptas exercitationem facere modi sint perferendis perspiciatis obcaecati consequuntur repudiandae natus maiores. Nobis delectus quibusdam laudantium iusto vel, aperiam temporibus beatae fuga rem eligendi voluptas at rerum ad porro consequuntur dolorum ipsam deserunt sunt facere? Est modi beatae accusantium praesentium tempora ipsum, adipisci atque aliquid alias magnam, facere velit doloribus ab voluptas asperiores rem pariatur deserunt recusandae dicta quisquam blanditiis ut ullam, delectus officia. Soluta sequi illo, aperiam cum praesentium nihil alias numquam repellendus exercitationem. Quibusdam cupiditate voluptates reprehenderit magni accusantium ea dolorem rem quisquam voluptatibus odio atque necessitatibus accusamus nostrum, molestias eaque voluptatem saepe pariatur perspiciatis distinctio quasi blanditiis neque cumque hic. Id cum assumenda delectus sit harum.</p>
 
 
