--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
 </body>
 
-<header>
-
+</header>
     <!-- Begin Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
