--- a/index.html
+++ b/index.html
@@ -67,21 +67,23 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://dummyimage.com/1900x600/ccc/0011ff.jpg" class="d-block w-100" alt="...">
+      <img src="images/pexels-pixabay-164745.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://dummyimage.com/1900x600/ccc/0011ff.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+      <!-- video goes here-->
+       <div class="ratio ratio-16x9">
+       <video autoplay loop muted>
+       <source src="videos/2022395-hd_1920_1080_30fps.mp4" type="video/mp4" />
+       </video>
+      </div>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://dummyimage.com/1900x600/ccc/0011ff.jpg" class="d-block w-100" alt="...">
+      <img src="images/pexels-wendywei-1190297.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
