--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </header>
 <main>
 
-<h1>The Lifestyle</h1>
+<!-- <h1>The Lifestyle</h1> -->
 
 <!--Begins Carousel-->
 <div id="carouselExampleCaptions" class="carousel slide">
