--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <!-- Local CSS -->
  <link href="css/styles.css" rel="stylesheet" />
+
+<style>
+  h1 {
+    display: none;
+  }
+</style>
+
 </head>
 <body>
 </body>
@@ -19,11 +26,11 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
@@ -56,7 +63,7 @@
 </header>
 <main>
 
-<!-- <h1>The Lifestyle</h1> -->
+<h1>The Lifestyle</h1>
 
 <!--Begins Carousel-->
 <div id="carouselExampleCaptions" class="carousel slide">
