--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,7 @@
   <body></body>
 
   <!-- begin header -->
-
+  <header-component></header-component>
   <!-- end header -->
   <main>sbout us page goes here</main>
   <footer>some footer content</footer>
@@ -32,5 +32,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Local Java Script -->
     <script src="js/scripts.js"></script>
+    <script src="components/js/header.js"></script>
   </section>
 </html>
