--- a/about-us.html
+++ b/about-us.html
@@ -23,7 +23,9 @@
   <header-component></header-component>
   <!-- end header -->
   <main>sbout us page goes here</main>
-  <footer>some footer content</footer>
+  <!-- begin footer -->
+  <footer-component></footer-component>
+  <!-- end footer -->
   <section>
     <!-- Bootsrap CDN JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
