--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
   <!-- End Font Awesome Row-->
 </div>
 </main>
-<footer>some footer content</footer>
+<!-- begin footer -->
+<footer-component></footer-component>
+<!-- end footer -->
 <section>
     <!-- Bootsrap CDN JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
@@ -106,5 +108,7 @@
     <script src="js/scripts.js"></script>
 <!-- Local JS file with header -->
   <script src="components/js/header.js"></script>
+  <!-- Local JS file with footer -->
+  <script src="components/js/footer.js"></script>
 </section>
 </html>
