--- a/about-us.html
+++ b/about-us.html
@@ -35,5 +35,6 @@
     <!-- Local Java Script -->
     <script src="js/scripts.js"></script>
     <script src="components/js/header.js"></script>
+    <script src="components/js/footer.js"></script>
   </section>
 </html>
