--- a/index.html
+++ b/index.html
@@ -85,14 +85,19 @@
 <!-- Begin Font Awesome Row-->
 <div class="container-fluid text-center blinn-fa-container">
   <div class="row">
-      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-music blinn-fa-icon"></i></div>
-      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-person blinn-fa-icon"></i></div>
-      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-ticket blinn-fa-icon"></i></div>
-      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-brands fa-spotify blinn-fa-icon"></i></div>
-      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-camera blinn-fa-icon"></i></div>
-      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-calendar blinn-fa-icon"></i></div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-music blinn-fa-icon"></i><br />Top Songs</div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-person blinn-fa-icon"></i><br />Our Artists</div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-ticket blinn-fa-icon"></i><br />Tickets</div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-brands fa-spotify blinn-fa-icon"></i><br />Platforms</div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-camera blinn-fa-icon"></i><br />Photos</div>
+      <div class="col col-12 col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2"><i class="fa-solid fa-calendar blinn-fa-icon"></i><br/>Calander</div>
   </div>
   <!-- End Font Awesome Row-->
+
+  <!-- Begin Clip Path -->
+  <div id="custom-clip-path"></div> 
+  <!-- End Clip Path --> 
+
 </div>
 </main>
 <!-- begin footer -->
