--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </button>
 </div>
 <!-- end caurosel-->
-
+<!-- Begin First Paragraph -->
 <div class="container">
   <div class="row">
     <div class="col-12 paragraph-one">
@@ -80,7 +80,40 @@
     </div>
   </div>
 </div>
+<!-- End First Paragraph -->
 
+<!-- Begin Headshot -->
+<div class="container">
+  <div class="row">
+    <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+      <img src="https://dummyimage.com/250x250/000/fff.jpg" class="cropped" />
+      <br />
+      <blockquote>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque accusantium velit ipsa perferendis, tempore quod.
+        <cite>Lorem ipsum dolor sit amet.</cite>
+      </blockquote>
+    </div>
+      <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+        <img src="https://dummyimage.com/250x250/000/fff.jpg" class="cropped" />
+        <br />
+        <blockquote>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque accusantium velit ipsa perferendis, tempore quod.
+          <cite>Lorem ipsum dolor sit amet.</cite>
+        </blockquote>
+      </div>
+        <div class="col col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+          <img src="https://dummyimage.com/250x250/000/fff.jpg" class="cropped" />
+          <br />
+          <blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque accusantium velit ipsa perferendis, tempore quod.
+            <cite>Lorem ipsum dolor sit amet.</cite>
+          </blockquote>
+        </div>
+    </div>
+  </div>
+</div>
+
+<!-- End Headshot -->
 
 <!-- Begin Font Awesome Row-->
 <div class="container-fluid text-center blinn-fa-container">
