--- a/Schedule.html
+++ b/Schedule.html
@@ -25,7 +25,7 @@
     <div class="wrapper-body">
       <div class="wrapper-main">
         <div class="wrapper-content">
-          <h1>Schedule</h1>
+          <h2>Schedule</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nihil ipsam, non fuga aliquam corrupti maxime eveniet laborum saepe magnam in, culpa vitae rerum porro quam dolore aperiam consectetur consequuntur nostrum dolorem! Neque, eligendi soluta. Assumenda ut sint repudiandae corrupti ratione quos soluta distinctio magnam rem ea unde odio provident, quia inventore dolorem autem neque magni deserunt exercitationem possimus maxime porro aspernatur? Qui odio, pariatur harum quasi et repellendus. Cum deserunt nulla earum placeat cupiditate necessitatibus, accusantium fugiat maiores soluta deleniti est dolore pariatur exercitationem reiciendis quod ipsum delectus! Quas consequuntur quisquam nihil, beatae deserunt sunt atque odit, aut facere tenetur modi! Quia, assumenda maiores quos repellendus necessitatibus est commodi eum voluptates dolorem officia consequatur, quo corrupti. Quaerat nam blanditiis autem omnis id perferendis velit at unde fugiat. Molestiae numquam cum
             impedit facere explicabo ullam doloribus fugiat, qui minima! Modi odit nemo officia fugit! Necessitatibus neque dolores aliquid iste esse, nihil alias maiores. Eveniet qui deleniti vel quia quaerat hic, rerum quasi commodi laudantium et fugiat illum ut mollitia error perferendis consequatur architecto blanditiis, tempore, labore corrupti quae accusantium repellat dolore quo. Illo quaerat doloribus praesentium, eaque a, omnis possimus neque accusamus earum veniam tenetur? Iste pariatur sunt consequatur numquam.
@@ -34,55 +34,56 @@
       </div>
 
       <table class="content-table table">
-        <tr>
-          <th>Times</th>
-          <th>Monday</th>
-          <th>Tuesday</th>
-          <th>Wednesday</th>
-          <th>Thursday</th>
-          <th>Friday</th>
-          <th>Saturday</th>
-          <th>Sunday</th>
-        </tr>
+        <thead>
+          <tr>
+            <th>Times</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+          </tr>
+        </thead>
 
-        <tr>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-        </tr>
-        <tr>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-        </tr>
-        <tr>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-          <td>data</td>
-        </tr>
+        <tbody>
+          <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+          </tr>
+          <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+          </tr>
+          <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+          </tr>
+        </tbody>
       </table>
 
       <div class="wrapper-content">
-        <h1>Schedule</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nihil ipsam, non fuga aliquam corrupti maxime eveniet laborum saepe magnam in, culpa vitae rerum porro quam dolore aperiam consectetur consequuntur nostrum dolorem! Neque, eligendi soluta. Assumenda ut sint repudiandae corrupti ratione quos soluta distinctio magnam rem ea unde odio provident, quia inventore dolorem autem neque magni deserunt exercitationem possimus maxime porro aspernatur? Qui odio, pariatur harum quasi et repellendus. Cum deserunt nulla earum placeat cupiditate necessitatibus, accusantium fugiat maiores soluta deleniti est dolore pariatur exercitationem reiciendis quod ipsum delectus! Quas consequuntur quisquam nihil, beatae deserunt sunt atque odit, aut facere tenetur modi! Quia, assumenda maiores quos repellendus necessitatibus est commodi eum voluptates dolorem officia consequatur, quo corrupti. Quaerat nam blanditiis autem omnis id perferendis velit at unde fugiat. Molestiae numquam cum
-          impedit facere explicabo ullam doloribus fugiat, qui minima! Modi odit nemo officia fugit! Necessitatibus neque dolores aliquid iste esse, nihil alias maiores. Eveniet qui deleniti vel quia quaerat hic, rerum quasi commodi laudantium et fugiat illum ut mollitia error perferendis consequatur architecto blanditiis, tempore, labore corrupti quae accusantium repellat dolore quo. Illo quaerat doloribus praesentium, eaque a, omnis possimus neque accusamus earum veniam tenetur? Iste pariatur sunt consequatur numquam.
-        </p>
+        <h2>Other heading</h2>
+        <p>Lorem ipsum dolor ullam doloribus fugiat, qui minima! Modi odit nemo officia fugit! Necessitatibus neque dolores aliquid iste esse, nihil alias maiores. Eveniet qui deleniti vel quia quaerat hic, rerum quasi commodi laudantium et fugiat illum ut mollitia error perferendis consequatur architecto blanditiis, tempore, labore corrupti quae accusantium repellat dolore quo. Illo quaerat doloribus praesentium, eaque a, omnis possimus neque accusamus earum veniam tenetur? Iste pariatur sunt consequatur numquam.</p>
       </div>
     </div>
   </main>
