--- a/Schedule.html
+++ b/Schedule.html
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <table class="content-table table">
+      <table class="content-table">
         <thead>
           <tr>
             <th>Times</th>
@@ -48,6 +48,36 @@
         </thead>
 
         <tbody>
+          <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+          </tr>
+          <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+          </tr>
+          <tr>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+            <td>data</td>
+          </tr>
           <tr>
             <td>data</td>
             <td>data</td>
