--- a/form.html
+++ b/form.html
@@ -21,7 +21,15 @@
   <!-- begin header -->
   <header-component></header-component>
   <!-- end header -->
-  <main>form goes here</main>
+  <main>
+    <!-- begin form -->
+    <form>
+      <div>
+        <input type="text" />
+      </div>
+    </form>
+    <!-- end form -->
+  </main>
   <!-- begin footer -->
   <footer-component></footer-component>
   <!-- end footer -->
