--- a/form.html
+++ b/form.html
@@ -23,11 +23,16 @@
   <!-- end header -->
   <main>
     <!-- begin form -->
-    <form>
-      <div>
-        <input type="text" />
-      </div>
-    </form>
+    <div class="web-form">
+      <form>
+        <div clas="row">
+          <div>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" name="firstName" />
+          </div>
+        </div>
+      </form>
+    </div>
     <!-- end form -->
   </main>
   <!-- begin footer -->
