--- a/form.html
+++ b/form.html
@@ -26,9 +26,14 @@
     <div class="web-form">
       <form>
         <div clas="row">
+          <!--First Name-->
           <div>
             <label for="first-name">First Name</label>
             <input type="text" id="first-name" name="firstName" />
+          </div>
+          <!-- Submit Button -->
+          <div>
+            <input type="submit" name="submit" value="Volunteer" />
           </div>
         </div>
       </form>
