--- a/form.html
+++ b/form.html
@@ -76,6 +76,8 @@
             </select>
             <input type="text" name="custom" id="Please input a custom size" disabled />
 
+            <!-- Tshirt color -->
+
             <div>
               <label for="color">T-shirt Color</label>
               <input type="color" name="color" id="color" />
@@ -84,7 +86,7 @@
 
           <!-- Submit Button -->
           <div>
-            <input type="submit" name="submit" value="Volunteer" />
+            <input type="submit" name="submit" value="Volunteer Now" class="submit" />
           </div>
         </div>
       </form>
