--- a/form.html
+++ b/form.html
@@ -82,6 +82,53 @@
               <label for="color">T-shirt Color</label>
               <input type="color" name="color" id="color" />
             </div>
+            <!-- backgroundcheck file upload-->
+
+            <div>
+              <label for="background-check">Background Check</label>
+              <input type="file" name="" id="background-check" accept=".pdf" . />
+            </div>
+          </div>
+
+          <!-- participating in radio buttons -->
+
+          <div>
+            <strong>Participating In</strong>
+
+            <input type="radio" name="Participation" id="fashion-show" value="Fashion show" required />
+            <label for="fashion-show">Fashion Show</label>
+
+            <input type="radio" name="Participation" id="donations" value="Donations" required />
+            <label for="donations">Donations</label>
+
+            <input type="radio" name="Participation" id="expectator" value="Expectator" required />
+            <label for="expectator">Expectator</label>
+          </div>
+
+          <!-- Time Of Day Check Boxes-->
+          <div>
+            <strong> Time of Day</strong><br />
+            <input type="checkbox" name="TimeOfDay" id="time-of-day-morning" value="Morning" required />
+            <label for="time-of-day-morning">Morning</label>
+
+            <input type="checkbox" name="TimeOfDay" id="time-of-day-afternoon" value="Afternoon" required />
+            <label for="time-of-day-afternoon">Afternoon</label>
+
+            <input type="checkbox" name="TimeOfDay" id="time-of-day-evening" value="Evening" required />
+            <label for="time-of-day-evening">Evening</label>
+          </div>
+          <!-- Comments -->
+
+          <div>
+            <label for="about you">Tell Us About Yourself</label>
+            <textarea name="about-you" id="about-you"></textarea>
+          </div>
+
+          <!-- Terms And Conditions Text box with toggle switch -->
+
+          <div>
+            <input type="checkbox" name="terms" id="terms-and-conditions" value="Yes" />
+            <label for="terms-and-conditions">I Accept The Terms And Conditions</label>
           </div>
 
           <!-- Submit Button -->
