--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
     <!-- begin form -->
     <div class="web-form">
       <form>
-        <div clas="row">
+        <div class="row">
           <!--First Name-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="first-name">First Name</label>
@@ -132,7 +132,7 @@
           </div>
 
           <!-- Submit Button -->
-          <div class="col-12">
+          <div class="col-2">
             <input type="submit" name="submit" value="Volunteer Now" class="submit" />
           </div>
         </div>
