--- a/form.html
+++ b/form.html
@@ -29,41 +29,41 @@
           <!--First Name-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="firstName" />
+            <input type="text" id="first-name" name="firstName" class="form-control" />
           </div>
 
           <!--Last Name-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="Last-name">Last Name</label>
-            <input type="text" id="last-name" name="lastName" />
+            <input type="text" id="last-name" name="lastName" class="form-control" />
           </div>
           <!--Age - Number -->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="age">Age</label>
-            <input type="number" name="age" id="age" min="18" max="120" />
+            <input type="number" name="age" id="age" min="18" max="120" class="form-control" />
           </div>
 
           <!-- Email-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="email">Email</label>
-            <input type="email" name="email" />
+            <input type="email" name="email" class="form-control" />
           </div>
 
           <!-- phone -->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="phone">Phone</label>
-            <input type="text" name="phone" id="phone" placeholder="(###) ###-####" />
+            <input type="text" name="phone" id="phone" placeholder="(###) ###-####" class="form-control" />
           </div>
 
           <!-- start date -->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="start-date">Start Date</label>
-            <input type="date" id="startDate" name="startDate" required />
+            <input type="date" id="startDate" name="startDate" required class="form-control" />
           </div>
           <!-- Tshirt - Select Field -->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <label for="T-shirt">T-Shirt Size</label>
-            <select id="T-Shirt" required>
+            <select id="T-Shirt" required class="form-select">
               <option value="">T-Shirt Size</option>
               <option value="XXS">XXS</option>
               <option value="XS">XS</option>
@@ -80,13 +80,13 @@
 
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
               <label for="color">T-shirt Color</label>
-              <input type="color" name="color" id="color" />
+              <input type="color" name="color" id="color" class="form-control" />
             </div>
             <!-- backgroundcheck file upload-->
 
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
               <label for="background-check">Background Check</label>
-              <input type="file" name="" id="background-check" accept=".pdf" . />
+              <input type="file" id="background-check" accept=".pdf" class="form-control" />
             </div>
           </div>
 
@@ -95,33 +95,33 @@
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <strong>Participating In</strong>
 
-            <input type="radio" name="Participation" id="fashion-show" value="Fashion show" required />
+            <input type="radio" name="Participation" id="fashion-show" value="Fashion show" required class="form-control radio" />
             <label for="fashion-show">Fashion Show</label>
 
-            <input type="radio" name="Participation" id="donations" value="Donations" required />
+            <input type="radio" name="Participation" id="donations" value="Donations" required class="form-control radio" />
             <label for="donations">Donations</label>
 
-            <input type="radio" name="Participation" id="expectator" value="Expectator" required />
+            <input type="radio" name="Participation" id="expectator" value="Expectator" required class="form-control radio" />
             <label for="expectator">Expectator</label>
           </div>
 
           <!-- Time Of Day Check Boxes-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <strong> Time of Day</strong><br />
-            <input type="checkbox" name="TimeOfDay" id="time-of-day-morning" value="Morning" required />
+            <input type="checkbox" name="TimeOfDay" id="time-of-day-morning" value="Morning" required class="form-control checkbox" />
             <label for="time-of-day-morning">Morning</label>
 
-            <input type="checkbox" name="TimeOfDay" id="time-of-day-afternoon" value="Afternoon" required />
+            <input type="checkbox" name="TimeOfDay" id="time-of-day-afternoon" value="Afternoon" required class="form-control checkbox" />
             <label for="time-of-day-afternoon">Afternoon</label>
 
-            <input type="checkbox" name="TimeOfDay" id="time-of-day-evening" value="Evening" required />
+            <input type="checkbox" name="TimeOfDay" id="time-of-day-evening" value="Evening" required class="form-control checkbox" />
             <label for="time-of-day-evening">Evening</label>
           </div>
           <!-- Comments -->
 
           <div class="col-12">
             <label for="about you">Tell Us About Yourself</label> <br />
-            <textarea name="about-you" id="about-you"></textarea>
+            <textarea name="about-you" id="about-you" class="form-control"></textarea>
           </div>
 
           <!-- Terms And Conditions Text box with toggle switch -->
@@ -132,8 +132,8 @@
           </div>
 
           <!-- Submit Button -->
-          <div class="col-2">
-            <input type="submit" name="submit" value="Volunteer Now" class="submit" />
+          <div class="col-12 form-check form-switch">
+            <input type="submit" name="submit" value="Volunteer Now" class="form-control submit" value="Yes" class="form-check-input checkbox" />
           </div>
         </div>
       </form>
