--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@
 
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
               <label for="color">T-shirt Color</label>
-              <input type="color" name="color" id="color" class="form-control" />
+              <input type="color" name="color" id="color" class="form-control form-control-color" />
             </div>
             <!-- backgroundcheck file upload-->
 
@@ -133,7 +133,7 @@
 
           <!-- Submit Button -->
           <div class="col-12 form-check form-switch">
-            <input type="submit" name="submit" value="Volunteer Now" class="form-control submit" value="Yes" class="form-check-input checkbox" />
+            <input type="submit" name="submit" value="Volunteer Now" class="submit" />
           </div>
         </div>
       </form>
