--- a/form.html
+++ b/form.html
@@ -127,13 +127,13 @@
           <!-- Terms And Conditions Text box with toggle switch -->
 
           <div class="col-12">
-            <input type="checkbox" name="terms" id="terms-and-conditions" value="Yes" />
+            <input type="checkbox" name="terms" id="terms-and-conditions" value="Yes" class="form-check-input checkbox" />
             <label for="terms-and-conditions">I Accept The Terms And Conditions</label>
           </div>
 
           <!-- Submit Button -->
           <div class="col-12 form-check form-switch">
-            <input type="submit" name="submit" value="Volunteer Now" class="submit" />
+            <input type="submit" name="submit" value="Volunteer Now" class="submit btn btn-primary" />
           </div>
         </div>
       </form>
