--- a/form.html
+++ b/form.html
@@ -84,7 +84,7 @@
             </div>
             <!-- backgroundcheck file upload-->
 
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="col-12 col-md-4">
               <label for="background-check">Background Check</label>
               <input type="file" id="background-check" accept=".pdf" class="form-control" />
             </div>
