--- a/form.html
+++ b/form.html
@@ -74,7 +74,7 @@
               <option value="XXL">XXL</option>
               <option value="CUSTOM">CUSTOM</option>
             </select>
-            <input type="text" id="custom" name="custom" placeholder="Please input a custom size" disabled />
+            <input type="text" id="custom" name="custom" placeholder="Please input a custom size" disabled class="form-control" />
 
             <!-- Tshirt color -->
 
