--- a/form.html
+++ b/form.html
@@ -133,7 +133,7 @@
 
           <!-- Submit Button -->
           <div class="col-12 form-check form-switch">
-            <input type="submit" name="submit" value="Volunteer Now" class="submit btn btn-primary" />
+            <input type="submit" id="submit" name="submit" value="Volunteer Now" class="submit btn btn-primary" />
           </div>
         </div>
       </form>
