--- a/form.html
+++ b/form.html
@@ -95,26 +95,26 @@
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <strong>Participating In</strong>
 
-            <input type="radio" name="Participation" id="fashion-show" value="Fashion show" required class="form-control radio" />
+            <input type="radio" name="Participation" id="fashion-show" value="Fashion show" required class="form-check-input radio" />
             <label for="fashion-show">Fashion Show</label>
 
-            <input type="radio" name="Participation" id="donations" value="Donations" required class="form-control radio" />
+            <input type="radio" name="Participation" id="donations" value="Donations" required class="form-check-input radio" />
             <label for="donations">Donations</label>
 
-            <input type="radio" name="Participation" id="expectator" value="Expectator" required class="form-control radio" />
+            <input type="radio" name="Participation" id="expectator" value="Expectator" required class="form-check-input radio" />
             <label for="expectator">Expectator</label>
           </div>
 
           <!-- Time Of Day Check Boxes-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <strong> Time of Day</strong><br />
-            <input type="checkbox" name="timeOfDay" id="time-of-day-morning" value="Morning" required class="form-control checkbox timeOfDay" />
+            <input type="checkbox" name="timeOfDay" id="time-of-day-morning" value="Morning" required class="form-check-input checkbox timeOfDay" />
             <label for="time-of-day-morning">Morning</label>
 
-            <input type="checkbox" name="timeOfDay" id="time-of-day-afternoon" value="Afternoon" required class="form-control checkbox timeOfDay" />
+            <input type="checkbox" name="timeOfDay" id="time-of-day-afternoon" value="Afternoon" required class="form-check-input checkbox timeOfDay" />
             <label for="time-of-day-afternoon">Afternoon</label>
 
-            <input type="checkbox" name="timeOfDay" id="time-of-day-evening" value="Evening" required class="form-control checkbox timeOfDay" />
+            <input type="checkbox" name="timeOfDay" id="time-of-day-evening" value="Evening" required class="form-check-input checkbox timeOfDay" />
             <label for="time-of-day-evening">Evening</label>
           </div>
           <!-- Comments -->
