changes to color

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="row">
     <div class="col-12 paragraph-one">
       
-      <p style="color: blue; background-color: pink; font-family: Verdana, Geneva, Tahoma, sans-serif; padding: 20px;">
+      <p style="color: rgb(255, 0, 221); background-color: rgb(0, 0, 0); font-family: Verdana, Geneva, Tahoma, sans-serif; padding: 20px;">
         <img src="images/square/paragraph-one.jpg" class= "paragraph-one-img" alt="Singer on stage" />
         The Music Lifestyle is an online platform dedicated to supporting emerging music artists by giving them a space to showcase their work and gain exposure. The site offers up-and-coming musicians the opportunity to apply for a personalized artist page and feature article, helping to promote their music to a broader audience. With a mission to highlight fresh talent, The Music Lifestyle has already featured rising artists like illkira, heyzuko!, and KarateKxds, each receiving individual coverage that dives into their sound, journey, and creative vision. This promotional boost helps independent artists grow their fanbase and connect with listeners and industry professionals alike.
 
