--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img src="images/illkira.jpeg" class="cropped" />
         <br />
         <blockquote>
-          illkira is gearing up his newest album "TO MY TWIN FLAME" which he claims will be his most mainstream sound yet.
+          illkira is gearing up to drop his newest album "TO MY TWIN FLAME" which he claims will be his most mainstream sound yet.
           
         </blockquote>
       </div>
