--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="carousel-item">
       <!-- video goes here-->
-       <div class="ratio ratio-16x9">
+       <div class="carousel-item">
         <img src="images/illkira.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>illkira</h5>
