--- a/form.html
+++ b/form.html
@@ -95,8 +95,8 @@
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             <strong>Participating In</strong>
 
-            <input type="radio" name="Participation" id="fashion-show" value="Fashion show" required class="form-check-input radio" />
-            <label for="fashion-show">Fashion Show</label>
+            <input type="radio" name="Participation" id="promotion" value="Promotion" required class="form-check-input radio" />
+            <label for="promotion">Promotion</label>
 
             <input type="radio" name="Participation" id="donations" value="Donations" required class="form-check-input radio" />
             <label for="donations">Donations</label>
